--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
             </ul>
           </nav>
           <a href="#" class="logo">
-            <img src="images/logo.png" alt="Logo">
+            <img src="images/header/logo.png" alt="Logo">
           </a>
           <nav class="menu">
             <ul class="menu__list">
@@ -41,8 +41,23 @@
             </ul>
           </nav>
           <button class="header__btn">
-            <img src="images/icon_menu.svg" alt="menu">
+            <img src="images/header/icon_menu.svg" alt="menu">
           </button>
+          <div class="rightside-menu rightside-menu--close">
+            <button class="rightside-menu__close">
+              <img src="images/header/close.svg" alt="close">
+            </button>
+            <div class="rightside-menu__content">
+              <a class="rightside-menu__logo" href="">
+                <img src="images/header/logobig.png" alt="Logo">
+              </a>
+              <h4 class="rightside-menu__title">Furniture for life</h4>
+              <p class="rightside-menu__text">Sustainable hot chicken skateboard, dreamcatcher meggings actually squid.
+                Slow-carb everyday carry +1 art party microdosing, put a bird on it brooklyn</p>
+              <img class='rightside-menu__images' src="images/header/chair.jpg" alt="chair">
+            </div>
+
+          </div>
         </div>
       </div>
     </header>
